# senseshifter

./: .gitignore  Cargo.toml  components.json  package.json  pnpm-lock.yaml  sweep.yaml  tsconfig.json  turbo.json
.config/: nextest.toml
apps/osc-proxy/: .gitignore  Cargo.toml  README.md
apps/osc-proxy/src/: config.rs  logging.rs  main.rs  tui.rs
apps/senseshifter-cli/: Cargo.toml
apps/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-app/src-tauri/src/: config.rs  lib.rs  osc_manager.rs
apps/tauri-app/src-tauri/src/config/: README.md  mod.rs
apps/tauri-app/src-tauri/src/osc/: mod.rs
crates/airpods-rs/: Cargo.toml
crates/airpods-rs/examples/btleplug-listener/: main.rs
crates/airpods-rs/src/: lib.rs
crates/airpods-rs/src/continuity/: mod.rs  proximity_pairing.rs
crates/apple-continuity/: Cargo.toml
crates/apple-continuity/src/: lib.rs  proximity_pairing.rs
crates/apple-continuity/tests/: from_bytes.rs
crates/bh-haptic-definitions/: Cargo.toml
crates/bh-haptic-definitions/benches/: path_point_mappers.rs  path_point_mappers_iai.rs
crates/bh-haptic-definitions/src/: device.rs  lib.rs
crates/bh-haptic-definitions/src/audio/: mod.rs
crates/bh-haptic-definitions/src/path_point_mapper/: mapper.rs  mod.rs
crates/bh-haptic-definitions/src/tact/: frame.rs  frame_compilation.rs  mod.rs  rotation.rs  track.rs
crates/bh-haptic-definitions/src/tact/effect/: dot.rs  mod.rs  path.rs
crates/bh-haptic-definitions/src/traits/: mod.rs
crates/bh-haptic-definitions/tests/: common.rs  parse.rs
crates/bh-haptic-definitions/tests/fixtures/: .gitignore
crates/bh-sdk/: Cargo.toml  PROTOCOL.md
crates/bh-sdk/examples/: mitm-server.rs  v4-client.rs  v4-server.rs
crates/bh-sdk/examples/ws-logging-server/: main.rs
crates/bh-sdk/scripts/: client.js  server.js
crates/bh-sdk/src/: lib.rs
crates/bh-sdk/src/v2/: client.rs  common.rs  mod.rs  server.rs
crates/bh-sdk/src/v2/message/: client.rs  server.rs
crates/bh-sdk/src/v4/: data.rs  mod.rs
crates/bh-sdk/tests/: parse.rs
crates/ss-bh/: Cargo.toml
crates/ss-bh/examples/simple_server/: main.rs
crates/ss-bh/examples/v4_mitm_proxy/: main.rs
crates/ss-bh/src/server/: config.rs  mod.rs  task.rs
crates/ss-bh/tests/: common.rs  haptic_definitions_parse_valid.rs  integration_ws_v3.rs
crates/ss-osc/: Cargo.toml  README.md
crates/ss-osc/examples/: configuration.rs  connection_manager.rs  integrated_server.rs  router_integration.rs
crates/ss-osc/src/: lib.rs
crates/ss-osc/src/server/: config.rs  mod.rs  task.rs
crates/ss-osc/tests/: server.rs
crates/xrc-device-manager/: Cargo.toml
crates/xrc-device-manager/examples/: grpc-server.rs  scanner-auto-connect.rs
crates/xrc-device-manager/src/: lib.rs
crates/xrc-device-manager/src/api/: device.rs  device_descriptor.rs  device_internal.rs  device_properties.rs  mod.rs  simple_device.rs  transport.rs
crates/xrc-device-manager/src/manager/: mod.rs  task.rs
crates/xrc-device-manager/src/transport/: api.rs  mod.rs
crates/xrc-device-protocol-bhaptics/: Cargo.toml
crates/xrc-device-protocol-bhaptics/src/: device-config.json  device_config.rs  lib.rs
crates/xrc-device-protocol-bhaptics/src/btleplug/: connector.rs  constants.rs  device.rs  device_internal.rs  device_task.rs  mod.rs  protocol_specifier.rs
crates/xrc-device-transport/: Cargo.toml
crates/xrc-device-transport-btle/: Cargo.toml
crates/xrc-device-transport-btle/src/: lib.rs
crates/xrc-device-transport-btle/src/btleplug/: device.rs  mod.rs  specifier.rs
crates/xrc-device-transport-btleplug/: Cargo.toml
crates/xrc-device-transport-btleplug/examples/: scanner-auto-connect.rs
crates/xrc-device-transport-btleplug/src/: lib.rs
crates/xrc-device-transport-btleplug/src/api/: device.rs  mod.rs  protocol.rs
crates/xrc-device-transport-btleplug/src/manager/: mod.rs  task.rs
crates/xrc-device-transport-rfcomm/: Cargo.toml
crates/xrc-device-transport-rfcomm/examples/: scanner-auto-connect.rs
crates/xrc-device-transport-rfcomm/src/: lib.rs
crates/xrc-device-transport-serialport/: Cargo.toml
crates/xrc-device-transport-serialport/src/: lib.rs
crates/xrc-device-transport-serialport/src/manager/: mod.rs
crates/xrc-device-transport/src/: lib.rs
crates/xrc-device-transport/src/api/: connector.rs  device.rs  manager.rs  mod.rs
crates/xrc-devices-apple-continuity/: Cargo.toml
crates/xrc-devices-apple-continuity/src/: device.rs  lib.rs
crates/xrc-devices-bhaptics/: Cargo.toml
crates/xrc-devices-bhaptics/src/: constants.rs  device.rs  device_config.rs  lib.rs
crates/xrc-geometry/: Cargo.toml
crates/xrc-geometry/benches/: distance_to_point.rs  within.rs
crates/xrc-geometry/proptest-regressions/: within.txt
crates/xrc-geometry/proptest-regressions/circle/: mod.txt
crates/xrc-geometry/proptest-regressions/ellipse/: mod.txt
crates/xrc-geometry/proptest-regressions/point/: mod.txt
crates/xrc-geometry/src/: distance.rs  lib.rs  testing.rs  within.rs
crates/xrc-geometry/src/circle/: mod.rs
crates/xrc-geometry/src/distance/: mod.rs  to_circle.rs  to_point.rs
crates/xrc-geometry/src/ellipse/: mod.rs
crates/xrc-geometry/src/rectangle/: mod.rs
crates/xrc-geometry/src/shape/: mod.rs  shape_collection.rs
crates/xrc-geometry/src/triangle/: mod.rs
crates/xrc-haptics-body/: Cargo.toml
crates/xrc-haptics-body/benches/: search_closest.rs
crates/xrc-haptics-body/examples/: visualize_closest.rs
crates/xrc-haptics-body/src/: geometry.rs  lib.rs  plane.rs  plane_state.rs
crates/xrc-haptics-manager/: Cargo.toml
crates/xrc-haptics-manager/src/: lib.rs
crates/xrc-haptics-manager/src/api/: mod.rs  registrar.rs
crates/xrc-protocol-bhaptics/: Cargo.toml
crates/xrc-protocol-bhaptics/src/: connector.rs  constants.rs  device.rs  device_config.rs  device_task.rs  lib.rs  protocol_specifier.rs
crates/xrc-protocol-bhaptics/src/btleplug/: connector.rs  device.rs  mod.rs  protocol_specifier.rs
crates/xrconnect-proto/: Cargo.toml  build.rs
crates/xrconnect-proto/src/: lib.rs
crates/xrconnect-proto/src/codegen/: xrconnect.devices.v1alpha1.rs
(+114 files in other folders)
