[workspace]
resolver = "3"
members = [
    "crates/*",
]

[workspace.dependencies]
bh-haptic-definitions = { path = "crates/bh-haptic-definitions" }
bh-sdk = { path = "crates/bh-sdk" }

serde_handy = { path = "crates/serde_handy" }

anyhow = "^1.0.99"
thiserror = "^2.0.16"
tracing = "^0.1.41"
tracing-subscriber = "^0.3.20"

derivative = "^2.2.0"
derive_more = "^2.0.1"
getset = "^0.1.6"
strum = "^0.27.2"

serde = "^1.0.219"
serde_json = "^1.0.143"
serde_with = "^3.14.0"

tokio = "^1.47.1"
tokio-stream = "^0.1.17"
tokio-util = "^0.7.16"

base64 = "^0.22.1"
reqwest = "^0.12.23"
walkdir = "^2.5.0"

# common dev-dependencies
cargo-husky = { version = "^1.5.0", default-features = false, features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy"] }

[workspace.dev-dependencies]
cargo-husky = { workspace = true, default-features = false, features = ["precommit-hook", "run-cargo-check", "run-cargo-fmt", "run-cargo-clippy"] }
