[package]
name = "osc-proxy"
version.workspace = true
edition.workspace = true

[[bin]]
name = "osc-proxy"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
xrc-commons = { workspace = true }
ss-osc = { workspace = true, features = ["server"] }

# CLI and config
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"

# Async runtime
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
futures-util = { workspace = true }

# Error handling
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"

# TUI
ratatui = "0.28"
crossterm = "0.28"

# Utilities
regex = "1.11"
chrono = { version = "0.4", features = ["serde"] }