[package]
name = "bh-haptic-definitions"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
tracing = { workspace = true }

derivative = { workspace = true }
getset = { workspace = true }
strum = { workspace = true, features = ["derive"] }

serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

base64 = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true, features = ["json"] }

[dev-dependencies]
walkdir = { workspace = true }

[features]
serde = ["dep:serde", "dep:serde_json", "dep:base64"]
client = ["dep:reqwest", "serde"]