[package]
name = "bh-sdk"
version.workspace = true
edition.workspace = true

[dependencies]
tungstenite = "0.27.0"
rand = { workspace = true, optional = true}
rand_chacha = { workspace = true, optional = true}
rsa = { workspace = true, optional = true}

anyhow = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }
futures-channel = "0.3.31"
futures-util = "0.3.31"
tokio-tungstenite = "0.27.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
# Crypto dependencies for encrypted examples
aes-gcm = "0.10"
base64 = "0.22"
hex = "0.4"

[features]
default = ["serde", "v1", "v2", "v3", "v4"]

serde = ["dep:serde", "dep:serde_json"]

v1 = []
v2 = []
v3 = []
v4 = ["dep:rand", "dep:rand_chacha", "dep:rsa"]

[[example]]
name = "ws-logging-server"
path = "examples/ws-logging-server/main.rs"

[[example]]
name = "v4-client"
path = "examples/v4-client.rs"
required-features = ["v4"]

[[example]]
name = "v4-server"
path = "examples/v4-server.rs"
required-features = ["v4"]

[[example]]
name = "mitm-server"
path = "examples/mitm-server.rs"
required-features = ["v4"]