[package]
name = "bh-sdk"
version = "0.1.0"
edition = "2024"

[dependencies]
bh-haptic-definitions = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }

derivative = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
getset = { workspace = true }
strum = { workspace = true, features = ["derive"] }

serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
serde_handy = { workspace = true, optional = true, features = ["json"] }
serde_with = { workspace = true, optional = true, features = ["json"] }
serde-inline-default = { workspace = true, optional = true }

[dev-dependencies]
walkdir = { workspace = true }

[features]
# Utility features
serde = ["dep:serde", "dep:serde_json", "dep:serde_handy", "dep:serde_with", "bh-haptic-definitions/serde", "dep:serde-inline-default"]

# Functional features
v1 = []
v2 = []
v3 = ["serde", "bh-haptic-definitions/client"]
v4 = ["serde", "bh-haptic-definitions/client"]