[package]
name = "ss-bh"
version = "0.1.0"
edition = "2024"

[dependencies]
bh-haptic-definitions = { workspace = true }
bh-sdk = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }

derivative = { workspace = true }
derive_more = { workspace = true, features = ["display"] }
getset = { workspace = true }

serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }

axum = { workspace = true, features = ["json", "ws", "tokio"] }
axum-server = { workspace = true }
rustls = { workspace = true, optional = true }

tokio = { workspace = true }

[features]
serde = ["dep:serde", "dep:serde_json", "bh-haptic-definitions/serde", "bh-sdk/serde"]

tls = ["dep:rustls", "axum-server/tls-rustls"]

v1 = ["bh-sdk/v1"]
v2 = ["bh-sdk/v2"]
v3 = ["bh-sdk/v3", "tls"]
v4 = ["bh-sdk/v4", "tls"]
