[package]
name = "ss-osc"
version.workspace = true
edition.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
xrc-commons = { workspace = true }

anyhow = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true }
dashmap = { workspace = true }
dyn-clone = { workspace = true }

rosc = { version = "^0.11.4" }
regex = { version = "^1.11.1"}
serde_regex = { version = "^1.1.0", optional = true }

[features]
default = ["serde"]
serde = ["dep:serde", "serde_regex"]

server = []
client = []

[dev-dependencies]
tracing-subscriber = { workspace = true }

toml = { version = "0.9.5" }
serde_yaml = { version = "^0.9.33" }