[package]
name = "xrc-device-manager"
version.workspace = true
edition.workspace = true

[features]
default = ["manager"]

manager = []

serde = ["dep:serde", "uuid/serde", "xrc-haptics-manager/serde"]

mockall = ["dep:mockall", "xrc-haptics-manager/mockall"]

[dependencies]
xrc-commons = { workspace = true }

xrc-haptics-manager = { workspace = true, default-features = false }

uuid = { workspace = true }

anyhow = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
dashmap = { workspace = true }
dyn-clone = { workspace = true }

mockall = { workspace = true, optional = true }

[dev-dependencies]
xrc-haptics-manager = { workspace = true, default-features = false, features = ["mockall"] }

xrc-device-transport-btleplug = { workspace = true }

mockall = { workspace = true }
tracing-subscriber = { workspace = true }