[package]
name = "xrc-device-manager"
version.workspace = true
edition.workspace = true

[features]
default = ["manager"]

manager = []

serde = ["dep:serde", "uuid/serde", "xrc-haptics-manager/serde"]

mockall = ["dep:mockall", "xrc-haptics-manager/mockall"]

[dependencies]
xrc-commons = { workspace = true }

xrc-haptics-manager = { workspace = true, default-features = false }

uuid = { workspace = true }

anyhow = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

async-stream = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
dashmap = { workspace = true }
dyn-clone = { workspace = true }

mockall = { workspace = true, optional = true }

[dev-dependencies]
xrc-haptics-manager = { workspace = true, default-features = false, features = ["mockall"] }

xrc-device-transport-btleplug = { workspace = true }
xrc-device-transport-serialport = { workspace = true }
xrc-device-transport-rfcomm = { workspace = true }

xrc-device-protocol-bhaptics = { workspace = true, features = ["btleplug"] }

mockall = { workspace = true }
tracing-subscriber = { workspace = true }

[[example]]
name = "scanner-auto-connect"
path = "examples/scanner-auto-connect.rs"
required-features = ["manager"]