[package]
name = "xrc-device-protocol-bhaptics"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
btleplug = ["dep:xrc-device-transport-btleplug", "dep:btleplug"]

[dependencies]
xrc-commons = { workspace = true }

xrc-device-transport-btleplug = { workspace = true, default-features = false, optional = true }

btleplug = { workspace = true, optional = true }
uuid = { workspace = true }

# always required to parse dynamic device configuration
serde_json = { workspace = true }

anyhow = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }