[package]
name = "xrc-device-transport-btleplug"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["manager"]

serde = ["dep:serde"]

manager = []

# protocol-bhaptics = ["dep:xrc-device-protocol-bhaptics"]

[dependencies]
xrc-device-manager = { workspace = true, default-features = false }

btleplug = { workspace = true }
uuid = { workspace = true, features = ["v8"] }

anyhow = { workspace = true }
derivative = { workspace = true }
getset = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
thiserror = { workspace = true }
tracing = { workspace = true }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
dashmap = { workspace = true }
dyn-clone = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "^0.56.0", features = ["Devices_Bluetooth", "Foundation"] }

[dev-dependencies]
xrc-device-protocol-bhaptics = { workspace = true, features = ["btleplug"] }

tracing-subscriber = { workspace = true }

[[example]]
name = "scanner-auto-connect"
path = "examples/scanner-auto-connect.rs"
required-features = ["manager"]
