[package]
name = "xrc-device-transport-rfcomm"
version.workspace = true
edition.workspace = true

[features]
default = ["manager"]

manager = []

[dependencies]
xrc-commons = { workspace = true }

xrc-device-manager = { workspace = true, default-features = false }

async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-util = { workspace = true }
dashmap = { workspace = true }

tracing = { workspace = true }


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.56.0", features = ["Foundation_Collections", "Devices_Bluetooth_Rfcomm", "Devices_Enumeration"] }

[target.'cfg(target_os = "linux")'.dependencies]
bluetooth-serial-port = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[[example]]
name = "scanner-auto-connect"
path = "examples/scanner-auto-connect.rs"
required-features = ["manager"]