[package]
name = "xrc-transport"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proto-v1alpha1 = ["xrconnect-proto/v1alpha1"]
serde = ["dep:serde"]

[dependencies]
xrconnect-proto = { workspace = true }

tokio = { workspace = true, features = ["sync", "rt"] }
tokio-util = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

serde = { workspace = true, features = ["derive"], optional = true }

[dev-dependencies]
mockall = "^0.11"