[package]
name = "xrc-devices-apple-continuity"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
proto-v1alpha1 = ["xrconnect-proto/v1alpha1"]

[dependencies]
xrconnect-proto = { workspace = true }
xrc-transport = { workspace = true }
xrc-transport-btle = { workspace = true }
apple-continuity = { path = "../apple-continuity" }
bytes = "1.5.0"
tracing = { workspace = true }
btleplug = { workspace = true }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.51.1"
features = ["Devices_Bluetooth", "Devices_Enumeration", "Foundation_Collections"]