[package]
name = "xrc-devices-bhaptics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrconnect-proto = { workspace = true }
xrc-transport = { workspace = true }
xrc-transport-btle = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = "1.3.1"
getset = { workspace = true }
tracing = { workspace = true }