[package]
name = "xrc-geometry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "^0.4.1"
ordered-float = "4"
getset = { workspace = true }
array-init = "2"
nalgebra = "^0.32.3"
simba = "^0.8.1"

[dev-dependencies]
test-case = "3"
proptest = "1"
test-strategy = "^0.3.1"
