[package]
name = "xrc-geometry"
version = "0.1.0"
edition = "2021"
autobenches = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde-serialize = ["dep:serde", "nalgebra/serde-serialize"]

[dependencies]
num = "^0.4.1"
ordered-float = "4"
getset = { workspace = true }
array-init = "2"
nalgebra = "^0.32.3"
simba = "^0.8.1"
serde = { workspace = true, features = ["derive"], optional = true }
derivative = "2.2.0"

[dev-dependencies]
test-case = "3"
proptest = "1"
test-strategy = "^0.3.1"
nalgebra = { version = "^0.32.3", features = ["proptest"] }
criterion = { version = "0.4", features = ["html_reports"] }
xrc-geometry-test-fixtures = { path = "../xrc-geometry-test-fixtures"}

[[bench]]
name = "within"
harness = false

[[bench]]
name = "distance_to_point"
harness = false
