[package]
name = "xrc-haptics-body"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde-serialize = ["dep:serde", "xrc-geometry/serde-serialize", "dashmap/serde"]

[[example]]
name = "visualize_closest"

[dependencies]
xrc-geometry = { workspace = true }
num = "0.4"
nalgebra = "^0.32.3"
dashmap = "5"
anyhow = "1"
tokio = { workspace = true, features = ["sync"] }
serde = { workspace = true, features = ["derive"], optional = true }
getset = { workspace = true }

[dev-dependencies]
png = "0.17.10"
criterion = { version = "0.4", features = ["html_reports"] }
xrc-geometry-test-fixtures = { path = "../xrc-geometry-test-fixtures"}

[[bench]]
name = "search_closest"
harness = false
