[package]
name = "xrc-protocol-bhaptics"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xrc-device-transport-btleplug = { workspace = true, default-features = false }

uuid = { workspace = true }
btleplug = { workspace = true }

async-trait = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

anyhow = { workspace = true }
tracing = { workspace = true }