[package]
name = "xrconnect-proto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["v1alpha1"]
full = ["v1alpha1", "tonic-client", "tonic-server", "serde", "specta"]

v1alpha1 = []

tonic-client = ["tonic"]
tonic-server = ["tonic"]
tonic = ["dep:tonic"]

# micro_rpc = ["dep:micro_rpc", "dep:micro_rpc_build"]

specta = ["dep:specta", "serde"]
serde = ["dep:serde"]

[dependencies]
prost = "^0.12"
async-trait = "^0.1.73"

tonic = { version = "^0.10", optional = true }

serde = { workspace = true, features = ["derive"], optional = true }
specta = { version = "1", optional = true }
# micro_rpc = { workspace = true, optional = true }

[build-dependencies]
prost-build = "^0.12"
tonic-build = { version = "^0.10" }
# micro_rpc_build = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }