[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

#[profile.dev]
#incremental = true # Compile your binary in smaller steps.
#
#[profile.release]
#codegen-units = 1 # Allows LLVM to perform better optimization.
#lto = true # Enables link-time-optimizations.
#opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
#panic = "abort" # Higher performance by disabling panic handlers.
#strip = true # Ensures debug symbols are removed.

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ss-osc = { workspace = true, features = ["serde", "server"] }
uuid = { workspace = true, features = ["v4", "serde"] }
regex = { workspace = true }
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3.8"

